--- a/index.html
+++ b/index.html
@@ -6,12 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome.min.css">
-    <title>Document</title>
+    <title>blog éducatif et inspirant</title>
+    <meta name="description"
+        content="UniversBlog, un blog éducatif et inspirant pour apprendre, se motiver et explorer les technologies qui changent le monde." />
 
 </head>
 
 <body>
 
+    <main>
+  <h1>Bienvenue sur UniversBlog</h1>
+
+  <section class="intro">
+    <p>
+      UniversBlog est un <strong>blog éducatif et inspirant</strong> conçu pour tous ceux qui souhaitent progresser chaque jour.
+      À travers des articles variés, nous explorons l'<strong>apprentissage en ligne</strong> et partageons des ressources concrètes pour apprendre à son rythme.
+      Que vous soyez étudiant, autodidacte ou curieux, vous trouverez des conseils utiles pour booster votre <strong>motivation personnelle</strong>.
+      Chaque sujet est traité avec clarté et passion, pour vous accompagner dans votre parcours de développement.
+      Rejoignez une communauté qui valorise le savoir et la progression continue.
+    </p>
+  </section>
+</main>
+
+<main>
+  <h1>Bienvenue sur UniversBlog : votre blog éducatif et inspirant</h1>
+
+  <h2>1. Apprentissage en ligne : des ressources pour tous</h2>
+    <h3>1.1 Cours gratuits et plateformes recommandées</h3>
+    <h3>1.2 Conseils pour apprendre efficacement</h3>
+
+  <h2>2. Motivation personnelle : rester motivé chaque jour</h2>
+    <h3>2.1 Citations et techniques de motivation</h3>
+    <h3>2.2 Gérer les périodes de baisse d’énergie</h3>
+
+  <h2>3. Nouvelles technologies et avenir de l’éducation</h2>
+    <h3>3.1 Intelligence artificielle et apprentissage</h3>
+    <h3>3.2 Outils numériques utiles</h3>
+
+  <h2>4. À propos de l’auteur</h2>
+    <h3>4.1 Mon parcours</h3>
+    <h3>4.2 Pourquoi UniversBlog ?</h3>
+</main>
+    
     <nav class="navbar">
         <div class="logo">
             <h1>UniversBlog</h1>
@@ -31,7 +67,7 @@
                 <div class="card">
                     <span class="notif">Apprentissages</span>
                     <div class="right">
-                        <img src="sunny-ng-bACMAQ-HRGw-unsplash.jpg" alt="">
+                        <img src="apprentissage.jpg" alt="Jeune étudiant apprenant en ligne sur UniversBlog">
                         <span class="date">24 <br>Mai 2025</span>
                     </div>
 
@@ -49,7 +85,7 @@
                 <div class="card">
                     <span class="notif">Motivations</span>
                     <div class="right">
-                        <img src="soroush-karimi-5R8fDCalNo4-unsplash.jpg" alt="">
+                        <img src="motivation.jpg" alt="Femme motivée fixant ses objectifs personnels avec UniversBlog">
                         <span class="date">24 <br>Mai 2025</span>
                     </div>
 
@@ -67,7 +103,7 @@
                 <div class="card">
                     <span class="notif">Technologies</span>
                     <div class="right">
-                        <img src="goran-ivos-_yBEyYR8wps-unsplash.jpg" alt="">
+                        <img src="technologie.jpg" alt="Découverte des nouvelles technologies sur UniversBlog">
                         <span class="date">24 <br>Mai 2025</span>
                     </div>
 
@@ -109,10 +145,10 @@
                         </p>
                         <div>
                             <div class="icon">
-                                <img src="icons8-instagram-24.png" alt="">
-                                <img src="icons8-facebook-24.png" alt="">
-                                <img src="icons8-twitter-24.png" alt="">
-                                <img src="icons8-linkedin-24.png" alt="">
+                                <img src="icons8-instagram-24.png" alt="icons instagram">
+                                <img src="icons8-facebook-24.png" alt="icons facebook">
+                                <img src="icons8-twitter-24.png" alt="icons twitter">
+                                <img src="icons8-linkedin-24.png" alt="icons linkedin">
                             </div>
                         </div>
                     </div>
