--- a/index.html
+++ b/index.html
@@ -6,17 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome.min.css">
-    <title>blog éducatif et inspirant</title>
-    <meta name="description"
-        content="UniversBlog, un blog éducatif et inspirant pour apprendre, se motiver et explorer les technologies qui changent le monde." />
+    <title>Document</title>
 
 </head>
 
 <body>
 
-    <main>
- 
-    
     <nav class="navbar">
         <div class="logo">
             <h1>UniversBlog</h1>
@@ -114,7 +109,7 @@
                         </p>
                         <div>
                             <div class="icon">
-                                <img src="icons8-instagram-24.png" alt="icons instagram">
+                                <img src="icons8-instagram-24.png" alt="icons intagram">
                                 <img src="icons8-facebook-24.png" alt="icons facebook">
                                 <img src="icons8-twitter-24.png" alt="icons twitter">
                                 <img src="icons8-linkedin-24.png" alt="icons linkedin">
