--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome.min.css">
-    <title>Document</title>
+    <title>blog éducatif et inspirant</title>
+    <meta name="description"
+        content="UniversBlog, un blog éducatif et inspirant pour apprendre, se motiver et explorer les technologies qui changent le monde." />
 
 </head>
 
@@ -36,7 +38,7 @@
                     </div>
 
                     <div class="left">
-                        <h1>L'art de l'apprentissage continu</h1><br>
+                        <h1>Apprentissage en ligne : des ressources pour tous</h1><br>
                         <p>Apprendre ne s'arrête jamais. Que ce soit par des lectures,
                             des cours en ligne ou l'expérience, chaque jour est une
                             occasion d'évoluer.</p><br>
@@ -54,7 +56,7 @@
                     </div>
 
                     <div class="left">
-                        <h1>Rester motivé dans un monde distrayant</h1><br>
+                        <h2>Motivation personnelle : rester motivé chaque jour</h2><br>
                         <p>La motivation est une flamme qu'il faut nourrir.
                             Découvrez des astuces pratiques pour garder le cap
                             sur vos objectifs malgré les distractions.</p><br>
@@ -72,7 +74,7 @@
                     </div>
 
                     <div class="left">
-                        <h1>Les technologies qui transforment nos vies</h1><br>
+                        <h2>Nouvelles technologies et avenir de l’éducation</h2><br>
                         <p>Intelligence artificielle, objets connectés,
                             cloud... Ces technologies redéfinissent nos habitudes
                             et notre avenir.Explorons-les ensemble.</p><br>
@@ -87,7 +89,7 @@
             <div class="About">
                 <div class="search">
                     <input class="srch" type="search" name="" placeholder="Search">
-                    <button class="loupe"><img src="icons8-loupe-48.png" alt=""></button>
+                    <button class="loupe"><img src="icons8-loupe-48.png" alt="pour la recherche"></button>
                 </div>
 
                 <div class="form">
@@ -96,7 +98,7 @@
 
                 <div class="link">
                     <div class="profil">
-                        <img src="greg-rakozy-oMpAz-DN-9I-unsplash.jpg" alt="">
+                        <img src="greg-rakozy-oMpAz-DN-9I-unsplash.jpg" alt="profil du créateur du site">
                     </div>
 
                     <div>
