--- a/apropos.html
+++ b/apropos.html
@@ -25,7 +25,7 @@
     <div class="about-container">
 
         <div class="about-header">
-            <h1>À propos de UniversBlog</h1>
+            <h1>Bienvenue sur UniversBlog</h1>
             <p>Inspiration, apprentissage et technologies au service de tous 🚀</p>
         </div>
 
