--- a/apropos.html
+++ b/apropos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="CFG4FrOpbxu7K50klD-FKNrQ_EMqIaa5d15jHQuYTlg" />
     <link rel="stylesheet" href="apropos.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
