--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <meta name="google-site-verification" content="CFG4FrOpbxu7K50klD-FKNrQ_EMqIaa5d15jHQuYTlg" />
     <link rel="stylesheet" href="fontawesome.min.css">
     <title>blog éducatif et inspirant</title>
     <meta name="description"
