--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="style.css">
     <meta name="google-site-verification" content="CFG4FrOpbxu7K50klD-FKNrQ_EMqIaa5d15jHQuYTlg" />
     <link rel="stylesheet" href="fontawesome.min.css">
-    <title>blog éducatif et inspirant</title>
+    <title>UniversBlog – Blog éducatif et inspirant sur l’apprentissage, la motivation et la technologie</title>
     <meta name="description"
-        content="UniversBlog, un blog éducatif et inspirant pour apprendre, se motiver et explorer les technologies qui changent le monde." />
+        content="UniversBlog est un blog éducatif qui vous motive à apprendre chaque jour. Explorez l’apprentissage en ligne, la motivation personnelle et les nouvelles technologies." />
+    <link rel="canonical" href="https://universblog.com">
+    <meta property="og:title" content="UniversBlog – Blog éducatif et inspirant">
+<meta property="og:description" content="Apprenez chaque jour avec nos articles sur la motivation, l’apprentissage et les technologies.">
+<meta property="og:image" content="URL-de-votre-image-de-partage.jpg">
+<meta property="og:url" content="https://universblog.com">
 
 </head>
 
