--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <p>Apprendre ne s'arrête jamais. Que ce soit par des lectures,
                             des cours en ligne ou l'expérience, chaque jour est une
                             occasion d'évoluer.</p><br>
-                        <button><a href="apprentissage-en-ligne.html">voir plus »</a></button>
+                        <button><a href="voir1.html">voir plus »</a></button>
                     </div>
                 </div>
 
@@ -66,7 +66,7 @@
                         <p>La motivation est une flamme qu'il faut nourrir.
                             Découvrez des astuces pratiques pour garder le cap
                             sur vos objectifs malgré les distractions.</p><br>
-                        <button><a href="motivation-quotidienne.html">voir plus »</a></button>
+                        <button><a href="voir2.html">voir plus »</a></button>
                     </div>
                 </div>
 
@@ -84,7 +84,7 @@
                         <p>Intelligence artificielle, objets connectés,
                             cloud... Ces technologies redéfinissent nos habitudes
                             et notre avenir.Explorons-les ensemble.</p><br>
-                        <button><a href="nouvelles-technologies.html">voir plus »</a></button>
+                        <button><a href="voir3.html">voir plus »</a></button>
                     </div>
                 </div>
 
